# smos

./: .aaa.swp  Cargo.toml  README.md
.cargo/: config.toml
src/: aaa.txt  allocator.rs  color.rs  enum_define.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  panic.rs  serial.rs  vga_buffer.rs
src/exceptions/: asm.rs  interrupts.rs  mod.rs  panic.rs
src/io/: mod.rs  serial.rs  vga_buffer.rs
src/memory/: allocator.rs  map.rs  mod.rs
