[package]
name = "smos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.bootimage]
build-command = ["build"]


[dependencies]
bootloader = "*"
volatile = "*"
# 禁用栈展开
[profile.dev]
panic="abort"

[profile.release]
panic="abort"


